Bug 156437 - FILEOPEN: PDF opened with incorrect font "DummyName"
Summary: FILEOPEN: PDF opened with incorrect font "DummyName"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.5.5.2 release
Hardware: All All
: medium normal
Assignee: ⁨خالد حسني⁩
URL:
Whiteboard: target:24.2.0 target:7.6.0.2 target:7...
Keywords: bisected, regression
Depends on:
Blocks: PDF-Export
  Show dependency treegraph
 
Reported: 2023-07-24 08:50 UTC by Jeffery To
Modified: 2023-07-25 08:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
A test document I created in Writer (10.33 KB, application/vnd.oasis.opendocument.text)
2023-07-24 08:51 UTC, Jeffery To
Details
PDF exported in Writer from the test document (27.66 KB, application/pdf)
2023-07-24 08:52 UTC, Jeffery To
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeffery To 2023-07-24 08:50:44 UTC
Description:
When Draw opens a PDF with the font Source Sans 3[1] (OTF) embedded, any text using this font will not be shown with the correct font, and when this text is selected "DummyName" is shown in the Font Name toolbar selector.

[1]: https://github.com/adobe-fonts/source-sans

Steps to Reproduce:
1. In Writer, create a new document using Source Sans 3.
2. Export the document as PDF
3. Open the exported PDF in Draw

Actual Results:
Text is shown with the correct font, the correct font name is shown in the Font Name selector.

Expected Results:
Text is shown with an incorrect font, "DummyName" is shown in the Font Name selector.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 4; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: en-CA (en_CA.UTF-8); UI: en-US
Ubuntu package version: 4:7.5.5~rc2-0ubuntu0.23.04.1~lo1
Calc: threaded

I'm using Ubuntu 23.04 with LibreOffice installed from the LibreOffice Fresh PPA[2], though I do not believe this issue is specific to this OS/version.

I have Source Sans 3.052[3] OTF installed.

This may be related to #138325, though when I open the PDF with Document Viewer (evince) and check the file properties, I see the correct font name (SourceSans3-Regular).

[2]: https://launchpad.net/~libreoffice/+archive/ubuntu/ppa
[3]: https://github.com/adobe-fonts/source-sans/releases/tag/3.052R
Comment 1 Jeffery To 2023-07-24 08:51:43 UTC
Created attachment 188530 [details]
A test document I created in Writer
Comment 2 Jeffery To 2023-07-24 08:52:37 UTC
Created attachment 188531 [details]
PDF exported in Writer from the test document
Comment 3 Commit Notification 2023-07-25 02:16:41 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/42f0422d19c4d0a2fb09654fb6d1d92e50f6dd5c

tdf#156437: Fix missing name inside embedded Type 1 font in PDF

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-07-25 08:49:25 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/cca6fe148c3b69b7626c72f39599b9af67712496

tdf#156437: Fix missing name inside embedded Type 1 font in PDF

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-07-25 08:49:28 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/8568fd0f8d00d0ac4f4f87253fe3aa81b2f2d7fe

tdf#156437: Fix missing name inside embedded Type 1 font in PDF

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.