tdf#156437: Fix missing name inside embedded Type 1 font in PDF

Regression from:

commit 7415ce2b9795a78f836bc5e5bffb4b56eee26b21
Author: Khaled Hosny <khaled@aliftype.com>
Date:   Mon Dec 5 20:52:13 2022 +0200

    tdf#113048: Fix PDF ascender and descender of some fonts

We were setting the font in PDF /Font dictionary, but not inside the
font itself.

Change-Id: I1936f615f62fd7afa8f31d66d35dbded879328c5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154880
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit 75f25198376991937c76774afff35996143d570a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154863
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>